--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -16,7 +16,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="{{ site.blog }}" title="Blog de Vida de Dios en la Empresa" target="_blank">
+				<a href="/blog" title="Blog de Vida de Dios en la Empresa" target="_blank">
 					<i class="fa fa-list-ul"></i>
 				</a>
 			</li>
