--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@ layout: blog
   		<article class="post-content">
   			<img src="/images/blog/{{ page.full-image}}" alt="{{ page.title }}" class="img-responsive" />
   			<h1>{{ page.title }}</h1>
+  			{%include share.html%}
 		    {{ content }}
 			</article>
   	</div>
@@ -34,3 +35,4 @@ layout: blog
   </div>
 
 </div>
+
