--- a/_includes/header-blog.html
+++ b/_includes/header-blog.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default navbar-blog">
     <div class="container">
       <div class="col-xs-12">
         <div class="navbar-header">
@@ -9,9 +9,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="site-title" href="/"><img src="/images/icon-1.png" alt="{{ site.title }}"></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <a class="site-title" href="/"><img src="/images/icon-1.png" alt="{{ site.title }}"></a>
           <ul class="nav navbar-nav">
             {% for node in site.pages %}
               {% if node.title != nil %}
