--- a/css/main.scss
+++ b/css/main.scss
@@ -370,8 +370,14 @@ p.big{
 	padding:60px 0;
 	background: $brand-primary;
 	color: #000;
+	position: relative;
 	h1{
 		color:#000;
+	}
+	.social-links{
+		position: absolute;
+		top: 150px;
+		right: 0;
 	}
 }
 .blog{
@@ -415,6 +421,7 @@ p.big{
 	background: lighten($brand-primary, 30%);
 	padding: 25px 25px 40px 25px;
 	color: #000;
+	text-align:center;
 
 	p{
 		color: #000;
@@ -466,6 +473,25 @@ article{
 	}
 }
 
+// Main Menu Blog
+// --------------------------
+.navbar-blog{
+	#bs-example-navbar-collapse-1{
+		text-align: center;
+		.navbar-nav {
+	    float: none;
+	    display: inline-block;
+	    margin: 0;
+		}
+		a.site-title{
+    	display: inline-flex;
+    	img{
+    		margin-top: -30px;
+    	}
+    }
+	}
+}
+
 // Botones
 // --------------------------
 .btn.btn-border{
@@ -473,7 +499,7 @@ article{
 	padding:.25rem 2rem;
 	border-radius: 0;
 	color: #000;
-	font-sie: 0.8em;
+	font-size: 0.8em;
 	&:hover{
 		background: #000;
 		color: #fff;
