--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,9 @@ layout: blog
   <div class="row">
   	<div class="col-xs-12 col-md-6 col-md-offset-3">
   		<article class="post-content">
-  			<img src="/images/blog/{{ page.full-image}}" alt="{{ page.title }}" class="img-responsive" />
+        <div class="article-image">
+    			<img src="/images/blog/{{ page.full-image}}" alt="{{ page.title }}" />
+        </div>
   			<h1>{{ page.title }}</h1>
   			{%include share.html%}
 		    {{ content }}
