--- a/css/main.scss
+++ b/css/main.scss
@@ -469,9 +469,13 @@ article{
 	h1{
 		text-align: center;
 	}
-
-	img{
-		margin-bottom: 15px;
+	.article-image{
+		text-align: center;
+		img{
+			margin-bottom:15px;
+			display: inline-block;
+			max-width: 100%;
+		}
 	}
 }
 
