--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,7 @@ layout: blog
   			<h1>{{ page.title }}</h1>
   			{%include share.html%}
 		    {{ content }}
+        {% include firma.html %}
 			</article>
   	</div>
   	<!--
@@ -37,4 +38,3 @@ layout: blog
   </div>
 
 </div>
-
