--- a/css/main.scss
+++ b/css/main.scss
@@ -78,7 +78,7 @@ p.big{
 	.container, .container .row, .container .row div{
 		height:100%;
 	}
-	
+
 	.container .que-content{
 		position:relative;
 		height:100%;
@@ -97,7 +97,7 @@ p.big{
 			padding-top:40px;
 		}
 	}
-	
+
 }
 #que:after{
 	content:'';
@@ -145,7 +145,7 @@ p.big{
 @media (max-width: $screen-xs){
 	#que:after{
 		width:180px;
-	    right:0; 
+	    right:0;
 	}
 }
 
@@ -225,13 +225,13 @@ p.big{
 	z-index:2;
 	h2{
 		font-family: 'uni_sansbold';
-		font-size:2.5em; 
-	}	
+		font-size:2.5em;
+	}
 	h3{
 		font-family: 'uni_sansbold';
 		font-size:1.5em;
 	}
-} 
+}
 //footer
 //Contacto
 #contacto{
@@ -526,7 +526,7 @@ article{
 //----------------------------
 .share-page {
 		text-align: center;
-		margin-bottom: 20px;	
+		margin-bottom: 20px;
 
     a {
         display: inline-block;
@@ -555,4 +555,12 @@ article{
          background-color: #cb2027;
         }
     }
+}
+.post-container{
+  margin-bottom: 30px;
+}
+.post-content{
+  h2, h2, h3{
+    text-align: center;
+  }
 }
